# app-monorepo-template

./: .env.example  .env.local.example  .env.production.example  .env.staging.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  validation-summary.md
.github/: README.md  markdown-link-check-config.json
.github/workflows/: backend-ci.yml  ci.yml  database-ci.yml  deploy-production.yml  deploy-staging.yml  frontend-ci.yml  rollback.yml  security.yml
backend/: .env.example  .env.test  .flake8  .pre-commit-config-minimal.yaml  .pre-commit-config-robust.yaml  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  setup-dev.sh  validate_implementation.py  validate_layer_separation.py  validate_stub_models.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: auth.py  health.py  items.py
backend/app/core/: __init__.py  config.py  database.py  health.py  security.py
backend/app/models/: __init__.py  item.py  merchant.py  order.py  product.py  user.py
backend/app/repositories/: item_repository.py  user_repository.py
backend/app/schemas/: auth.py  item.py  user.py
backend/app/services/: auth_service.py  item_service.py
backend/tests/: test_api_integration.py  test_auth_system.py  test_main.py  test_stub_models.py
docs/: ARCHITECTURE.md  DOCKER_DEVELOPMENT.md  ENVIRONMENT_CONFIGURATION.md
frontend/: .env.example  .eslintignore  .eslintrc.json  Dockerfile  jest.config.js  jest.setup.js  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/__tests__/: README.md  example.test.tsx
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/lib/: api.ts  auth.tsx  config-server.js  config.ts
infra/: .gitignore  .gitkeep  Makefile  README.md  backend.tf  database.tf  frontend.tf  main.tf  networking.tf  outputs.tf  terraform.tf  variables.tf
infra/environments/: dev.tfvars  prod.tfvars  staging.tfvars
scripts/: check-docker.sh  dev-setup.sh  fix-imports.sh  fix-linting.sh  format-backend.sh  init-backend.py  init-db.sql  install-git-hooks.sh  lint-backend.sh  reset-db.py  reset-precommit.sh  run-integration-tests.sh  security-scan.sh  seed-db.py  setup-precommit.sh  setup-test-env.sh  setup.sh  test-all.sh  test-database.sh  test-env-config.sh  test-precommit.sh  validate-env.py  validate-env.sh  validate-migrations.sh
(+14 files in other folders)
